Page Editor: fixed: move target must not alter the height of the bar to avoid a slight flicker.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@54692 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-editor/src/main/resources/mgnl-resources/magnolia-templating-editor/css/editor.css
+++ b/magnolia-templating-editor/src/main/resources/mgnl-resources/magnolia-templating-editor/css/editor.css
@@ -405,11 +405,6 @@ div#site-info .mgnlEditorPlaceholder.component .gwt-Label {
 
 /* possible drop targets */
 .mgnlEditorBar.component.moveTarget {
-  height: 20px;
-  line-height: 19px;
-
-  padding: 0 3px;
-
   border: 1px solid #d0234b;
 }
 
